@@ -141,11 +141,21 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
   ok(SPVM::TestCase::NativeAPI->native_call_spvm_method);
 }
 
+# env->call_class_method
+{
+  ok(SPVM::TestCase::NativeAPI->native_call_class_method);
+}
+
+# env->call_instance_method
+{
+  ok(SPVM::TestCase::NativeAPI->native_call_instance_method);
+}
+
 # env->call_spvm_method_by_name
 {
-  ok(SPVM::TestCase::NativeAPI->native_call_spvm_method);
+  ok(SPVM::TestCase::NativeAPI->native_call_class_method_by_name);
   
-  eval { SPVM::TestCase::NativeAPI->native_call_spvm_method_exception };
+  eval { SPVM::TestCase::NativeAPI->native_call_class_method_by_name_exception; };
   ok($@);
 }
 
